Project_5_Potentiometer_with_temperature_sensor_LED_RGB/build/log/idf_py_stdout_output_736723
Command: ninja all
[1/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/rgb_led.c.obj
[2/11] Performing build step for 'bootloader'
[1/1] cd /home/zerendor/Documents/RTOS_Raiz/Project_5_Potentiometer_with_temperature_sensor_LED_RGB/build/bootloader/esp-idf/esptool_py && /home/zerendor/.espressif/python_env/idf5.5_py3.12_env/bin/python /home/zerendor/esp/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/zerendor/Documents/RTOS_Raiz/Project_5_Potentiometer_with_temperature_sensor_LED_RGB/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[3/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/zerendor/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/zerendor/Documents/RTOS_Raiz/Project_5_Potentiometer_with_temperature_sensor_LED_RGB/build/config -I/home/zerendor/esp/esp-idf/components/newlib/platform_include -I/home/zerendor/esp/esp-idf/components/freertos/config/include -I/home/zerendor/esp/esp-idf/components/freertos/config/include/freertos -I/home/zerendor/esp/esp-idf/components/freertos/config/xtensa/include -I/home/zerendor/esp/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/zerendor/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/zerendor/esp/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/zerendor/esp/esp-idf/components/freertos/esp_additions/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/include/soc -I/home/zerendor/esp/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/zerendor/esp/esp-idf/components/esp_hw_support/dma/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/ldo/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/debug_probe/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/mspi_timing_tuning/tuning_scheme_impl/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/power_supply/include -I/home/zerendor/esp/esp-idf/components/esp_hw_support/port/esp32/. -I/home/zerendor/esp/esp-idf/components/esp_hw_support/port/esp32/include -I/home/zerendor/esp/esp-idf/components/heap/include -I/home/zerendor/esp/esp-idf/components/heap/tlsf -I/home/zerendor/esp/esp-idf/components/log/include -I/home/zerendor/esp/esp-idf/components/soc/include -I/home/zerendor/esp/esp-idf/components/soc/esp32 -I/home/zerendor/esp/esp-idf/components/soc/esp32/include -I/home/zerendor/esp/esp-idf/components/soc/esp32/register -I/home/zerendor/esp/esp-idf/components/hal/platform_port/include -I/home/zerendor/esp/esp-idf/components/hal/esp32/include -I/home/zerendor/esp/esp-idf/components/hal/include -I/home/zerendor/esp/esp-idf/components/esp_rom/include -I/home/zerendor/esp/esp-idf/components/esp_rom/esp32/include -I/home/zerendor/esp/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/zerendor/esp/esp-idf/components/esp_rom/esp32 -I/home/zerendor/esp/esp-idf/components/esp_common/include -I/home/zerendor/esp/esp-idf/components/esp_system/include -I/home/zerendor/esp/esp-idf/components/esp_system/port/soc -I/home/zerendor/esp/esp-idf/components/esp_system/port/include/private -I/home/zerendor/esp/esp-idf/components/xtensa/esp32/include -I/home/zerendor/esp/esp-idf/components/xtensa/include -I/home/zerendor/esp/esp-idf/components/xtensa/deprecated_include -I/home/zerendor/esp/esp-idf/components/spi_flash/include -I/home/zerendor/esp/esp-idf/components/esp_adc/include -I/home/zerendor/esp/esp-idf/components/esp_adc/interface -I/home/zerendor/esp/esp-idf/components/esp_adc/esp32/include -I/home/zerendor/esp/esp-idf/components/esp_adc/deprecated/include -I/home/zerendor/esp/esp-idf/components/esp_driver_ledc/include -I/home/zerendor/esp/esp-idf/components/esp_driver_gpio/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/zerendor/Documents/RTOS_Raiz/Project_5_Potentiometer_with_temperature_sensor_LED_RGB=. -fmacro-prefix-map=/home/zerendor/esp/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/zerendor/Documents/RTOS_Raiz/Project_5_Potentiometer_with_temperature_sensor_LED_RGB/main/main.c
/home/zerendor/Documents/RTOS_Raiz/Project_5_Potentiometer_with_temperature_sensor_LED_RGB/main/main.c: In function 'display_info_task':
/home/zerendor/Documents/RTOS_Raiz/Project_5_Potentiometer_with_temperature_sensor_LED_RGB/main/main.c:104:51: error: format '%d' expects argument of type 'int', but argument 3 has type 'uint32_t' {aka 'long unsigned int'} [-Werror=format=]
  104 |         printf("LED Verde: %d%% | Potenciómetro: %d mV\n",
      |                                                  ~^
      |                                                   |
      |                                                   int
      |                                                  %ld
  105 |                current_pot_data.pot_percent, current_pot_data.pot_voltage_mv);
      |                                              ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
      |                                                              |
      |                                                              uint32_t {aka long unsigned int}
cc1: some warnings being treated as errors
[4/11] No install step for 'bootloader'
[5/11] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/ntc_sensor.c.obj
ninja: build stopped: subcommand failed.
